src/components/TimerComponent/TimerComponent.scss
@import '../../styles/global-variables';

.timer__timer {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: $size-m;
    width: 100%;

    &.timer_timer--running {
        height: 95%;
        width: 100%;
    }

    .timer__counter,
    .timer__time-input {
        font-size: $size-xxl;
        &--prepping {
            color: $yellow-light;
        }

        &--prepped {
            color: $green-light;
        }
    }

    .timer__scramble {
        font-size: 100%;
        margin-bottom: 1vw;
        width: 80%;

        .timer_scramble-letter {
            margin-left: $size-xs;
            margin-right: $size-xs;

            &.white {
                color: $cube-sticker-white-faded;
            }
            &.orange {
                color: $cube-sticker-orange-faded;
            }
            &.green {
                color: $cube-sticker-green-faded;
            }
            &.red {
                color: $cube-sticker-red-faded;
            }
            &.blue {
                color: $cube-sticker-blue-faded;
            }
            &.yellow {
                color: $cube-sticker-yellow-faded;
            }
        }
    }

    .timer__splits-table {
        margin: 0 auto;
        width: 60%;
    }

    .timer__current-splits {
        &.timer__current-splits--current {
            background-color: $green-light;
        }
        &.timer__current-splits--previous {
            background-color: $yellow-light;
        }
    }

    .timer__time-input {
        background: $input-background-color;
        border: $thin-border-size $input-border-color;
        border-radius: $size-xs;
        height: 3vw;
        width: 70%;
        color: $input-font-color;
        text-align: center;
        font-family: monospace;
        margin-bottom: 1vw;
        max-width: 90%;
        max-height: 160px;
    }

    .timer__input-note {
        font-size: $size-m;
        color: $main-font-color-muted;
        margin-bottom: 1vw;
    }

    .timer__input-actions {
        margin-bottom: $size-s;
        display: flex;
        flex-wrap: wrap;
        width: 430px;
        justify-content: center;

        .timer__button {
            margin: $size-xxs $size-xs;
            height: 69px;
            width: 69px;

            &.timer__button--big {
                height: 115px;
                width: 115px;
            }
        }
    }

    @media (min-width: $big-screen-width) {

        .timer__time-input,
        .timer__counter {
            font-size: 69px;
        }
    }

    @media (max-width: $small-screen-width) {
        .timer__scramble {
            font-size: $size-l;
            margin: $size-m;
            width: 90%;
        }
    }
}

@media (max-width: $small-screen-width) {
    .timer__timer {
        padding: 0;
        width: 100%;
    }
}

